--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,91 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* CSS reset */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  line-height: 1.4;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #ffffff;       
+  color: black;               
+}
+
+/* container */
+
+.container {
+  max-width: 720px;
+  margin: 48px auto;
+  padding: 24px;
+  border: 1px solid grey;
+  box-shadow: 0 10px 30px rgba(97, 74, 133, 0.09);
+}
+
+.title {
+  margin: 0 0 15px;
+  font-size: 23px;
+  font-weight: 550;
+}
+
+.title::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin-top: 8px;
+  border-radius: 999px;
+  background: #ceccda;
+}
+
+/* lista */
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 15px;
+}
+
+.item {
+  padding: 12px 0;
+  border-bottom: 1px solid white;
+}
+
+.item:hover {
+  background-color: #e9e9f3;
+  transform: translateX(4px);
+}
+
+.form {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  gap: 8px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.input {
+  flex: 1;
+  padding: 10px 15px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  outline: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+/* pulsante */
+
+.button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background: black;
+  color: white;
+  box-shadow: 0 8px 18px rgba(133, 117, 187, 0.40);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* hover */
+
+.button:hover {
+  opacity: 0.9;
+  background-color: #ceccda;
+  color: black;
 }
